# mario-box

./: .gitignore  CMakeLists.txt  README.md  main.cpp  utils.h
hardware/: C6502.cpp  C6502.h
hardware/bus/: Bus.cpp  Bus.h
src/: Logger.cpp  Logger.h  main.cpp  olcPixelGameEngine.cpp  olcPixelGameEngine.h
src/core/: A2A03.cpp  A2A03.h  C6502.cpp  C6502.h  Cartridge.cpp  Cartridge.h  Controllers.cpp  Controllers.h  DMA.cpp  DMA.h  Mapper.cpp  Mapper.h  Memory.cpp  Memory.h  NES.cpp  NES.h  P2C02.cpp  P2C02.h  SystemBus.cpp  SystemBus.h  synthesizer.cpp  synthesizer.h
src/core/ppu/: NESColor.h  NameTables.cpp  NameTables.h  P2C02.cpp  P2C02.h  Palettes.cpp  Palettes.h  PatternTables.cpp  PatternTables.h
src/debug/: ASM.cpp  ASM.h
src/graphics/: Frame.cpp  Frame.h  NESColor.h
src/graphics/olc/: OLCFrame.cpp  OLCFrame.h
src/platform/: AudioLibrary.h  Canvas.h
src/platform/audiounit/: AudioUnitLib.cpp  AudioUnitLib.h
src/platform/olc/: olcCanvas.cpp  olcCanvas.h
